files modified by Jon Lessar

--- a/gitRef.html
+++ b/gitRef.html
@@ -4,12 +4,12 @@
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- gitDemo.html - file to be shared by others using Github to demonstrate power of Git
-  Peter Johnson - peterk@webExplorations.com
+  Jon Lessar lessarj@csp.edu
   Written:   07-12-16 
   Revised:   
   -->
  <title>Git Demo</title>
-
+<p>Hello I am modifiying this web page for a git demo</p>
  <script>
 
  </script>
