Added code to my gitRef html about git push.

--- a/gitRef.html
+++ b/gitRef.html
@@ -9,7 +9,7 @@
   Revised:   
   -->
  <title>Git Demo</title>
-<p>Hello I am modifiying this web page for a git demo</p>
+<p>Hello I am modifiying this web page for a git demo, demonstating a push to GitHub</p>
  <script>
 
  </script>
