--- a/gitRef.html
+++ b/gitRef.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<header>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- gitDemo.html - file to be shared by others using Github to demonstrate power of Git
@@ -9,60 +9,101 @@
   Revised:   
   -->
  <title>Git Demo</title>
-
+<h1>The Git Page</h1>
  <script>
 
  </script>
  <style>
-  body {
-  background:  #EEE;
-  font-size:   16px;
-  font-family: helvetica, arial, sans-serif;
-  }
-  
-  h1 {
-  border:  1px #000080 solid;
-  padding: 10px;
-  background:  #AAA;
-  color:    white;
-  }
-  
-  h2 {
-  background: #DDD;
-  color:      #000080;
-  padding:    10px;
-  border:     1px #000080 solid;
-  }
-  
-  li {
-  margin:     1.5em 0 0 0;
-  }
-  
-  #frame {
-  max-width:   800px;
-  margin:      auto;
-  border:      1px solid #000080;
-  padding:     20px;
-  }
+	body {
+	background:  #EEE;
+	font-size:   16px;
+	font-family: helvetica, arial, sans-serif;
+	}
+
+	h1 {
+	border:  1px #000080 solid;
+	padding: 10px;
+	background:  #AAA;
+	color:    white;
+	}
+
+	h2 {
+	background: #DDD;
+	color:      #000080;
+	padding:    10px;
+	border:     1px #000080 solid;
+	}
+
+	li {
+	margin:     1.5em 0 0 0;
+	}
+
+	#frame {
+	max-width:   800px;
+	margin:      auto;
+	border:      1px solid #000080;
+	padding:     20px;
+	}
+	
+	header {
+    background-color:black;
+    color:white;
+    text-align:center;
+    padding:5px; 
+	}
+	
+	footer {
+	background-color:black;
+	color:white;
+	clear:both;
+	text-align:center;
+	padding:5px; 
+	}
+	
+	img#logo{
+	float: left;
+	width: 10%;
+	margin: 10px;
+	border-radius: 10px;
+	}
  </style>
-</head>
+</header>
+
 <body>
 <div id="frame">
-<h1>Git Cheat Sheet</h1>
+<h2>Git Tutorial</h2>
 <p>In order to use git, you need to use command prompt or powershell.  I will be using command prompt.</p>
 <img src="graphic/cmdPrompt.png" alt="Command Prompt" style="width:304px;height:228px;">
 <p>On the image, you can see I used c: to change to the c drive, and then cd (change drive) \Program Files (x86)\Ampps\www\CSC245, 
 then cd\ Week2Assignment to go to folder I wanted.</p>
-<p>I then used git Clone https://github.com/JLessar/Week2Assignment.git to copy the repository I previously created at GitHub.
+<p>I then used <b>git Clone</b> https://github.com/JLessar/Week2Assignment.git to copy the repository I previously created at GitHub.
 I was able to get the proper address by copying the yellow highlighted text.</p>
 <img src="graphic/gitHub.png" alt="GitHub Repository" style="width:304px;height:228px;">
-<p>Next I will pull the code in, to make sure I have the latest version, using git pull https://github.com/JLessar/Week2Assignment.git</p>
+<p>Next I will pull the code in, to make sure I have the latest version, using <b>git pull</b> https://github.com/JLessar/Week2Assignment.git</p>
 <img src="graphic/cmdPromptPull.png" alt="Getting latest version of Git Repository" style="width:304px;height:228px;">
 <p>I will also use <b>git status</b> to see the changes I made.  Unsaved changes appear in red.</p>
 <p>These changes need to be saved using <b>git add .</b>.  Using <b>git status</b> again, we can see the red has changed to green, 
 meaning we are ready to upload them to the repository.</p>
 <img src="graphic/cmdPromptAdd.png" alt="Updating latest version of Git Repository" style="width:304px;height:228px;">
+<p>Using <b>git commit -m" "</b> I commit to the changes and can add commentting between the quotations.  This is key, because
+it will show up in your repository for all to see.</p>
+<img src="graphic/cmdPromptCommit.png" alt="Commentting on latest updates" style="width:300px;height:100px;">
+<p>Lastly, I will push the freshly updated files into the GitHub repository.  This is done by using the <b>git push</b> command.</p>
+<img src="graphic/cmdPromptPush.png" alt="Pushing latest version to Git Repository" style="width:304px;height:228px;">
+<p>You can now see the updated, with comments, GitHub repository.</p>
+<img src="graphic/gitHubFinal.png" alt="Latest version on GitHub" style="width:304px;height:228px;">
+<p>With the comments we added using <b>commit -m" "</b> visible on all the files modified.</p>
+<p>You can view all the commits by clicking the commits, which will display the list of what and when was committed.</p>
+<img src="graphic/gitCommit.png" alt="Commit Records on GitHub" style="width:304px;height:228px;">
+<p>You can even create different branches from the master, so you can keep different revisons.  I created one called tempBranch.</p>
+<img src="graphic/tempBranch.png" alt="New branch from Master File" style="width:304px;height:228px;">
+<p>Anything you do can be compared to the Original Master branch.  You can even merge them.</p>
+<img src="graphic/compareBranches.png" alt="Comparing Branches" style="width:304px;height:228px;">
 
+<br/><br/>
+
+
+<h2>Git Cheat Sheet</h2>
 <p><b>git Clone (website/file address)</b>  This command is needed only once to download the file which you will be working on.  
 It will download and set up the files, based on the folder structure in gitHub.</p>
 <p><b>dir</b>  This command shows the directory/files in the folder.</p>
@@ -79,6 +120,10 @@ also carries your comments on the additions you made.</p>
 
 </div>
 </body>
+<footer>
+<a href="http://jonle.byethost5.com/prjProcess/prjProcessReadMe.php" target="_blank">Copyright @ EEI</a>
+</footer>
+<img id="logo" src="graphic/EEILogo.png" alt="Company Logo"/>
 </html>
 
 
